part 2 of the stories section complete, I need to look into bug re cards text alignment

--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -9,7 +9,7 @@
     font-size: $default-font-size;
     transform: skewX(-12deg);
     /* color: $color-grey-dark-2; */
-    /* position: relative; */
+    position: relative;
 
     & > * {
         transform: skewX(12deg);
@@ -24,16 +24,43 @@
         -webkit-clip-path: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
-        /* position: absolute; */
+        position: relative;
         /* top: 0; */
         /* left: 0; */
     }
 
     &__img {
         height: 100%;
+        transform: translateX(-4rem) scale(1.4);
+        backface-visibility: hidden;
+        transition: all .5s;
     }
 
     &__text {
         transform: skewX(12deg);
+    }
+
+    &__caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        color: $color-white;
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity: 0;
+        transition: all .5s;
+        backface-visibility: hidden;
+    }
+
+    &:hover &__caption {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+
+    &:hover &__img {
+        transform: translateX(-4rem) scale(1);
+        filter: blur(3px) brightness(80%);
     }
 }
